k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meetsou-service
  namespace: meetsou
spec:
  selector:
    app: meetsou
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
